src/objects/AppSettings__c.object
<CustomObject>
    <description>this holds the information about the setting for a specific app</description>
    <fields>
        <fullName>AppSettingImage__c</fullName>
        <label>AppSettingImage</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AppVersion__c</fullName>
        <label>AppVersion</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hash_Key__c</fullName>
        <label>Hash Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mobileDevice__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>MobileDevice</label>
        <referenceTo>MobileDevice__c</referenceTo>
        <relationshipLabel>AppSetting</relationshipLabel>
        <relationshipName>AppSetting</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>version__c</fullName>
        <description>the semantic version for the app</description>
        <label>version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>AppSetting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AppSettings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AppSetting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>